--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "Webpack .",
     "test": "test",
     "format": "npx prettier --write .",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "init:tailwind": "tailwindcss init",
+    "build:tailwind": "tailwindcss -i ./index.css -o ./public/main.css",
+    "build:tailwind:watch": "tailwindcss -i ./index.css -o ./public/main.css --watch"
   },
   "license": "MIT",
   "dependencies": {
@@ -20,23 +21,33 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.7",
     "babel-loader": "^9.1.2",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.3",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.2",
     "pretty-quick": "^3.1.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "web-vitals": "^3.1.0"
   },
   "husky": {
     "hooks": {
